# SIN-Solver

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitignore.additions  .pre-commit-config.yaml  .secrets.baseline  .session-19-ses_3f9bc1908ffeVibfrKEY3Kybu5.md  .session-20-ses_20_skyvern_steel_arch_20260130.md  .session-ses_3ee8bb2e5ffexcrDB35T6FxciT.md  .vercelignore  .yamllint.yml  AGENTS.md  AGENTS_APPENDIX.md  AGENT_SWARM_COORDINATION.md  API-KEY-SETUP.md  API-TESTING-GUIDE.md  ARCHITECTURE-ENTERPRISE-ELITE.md  ARCHITECTURE-MODULAR.md  ARCHIVE_TIMELINE_2026.md  AUTO_DEPLOY_WHEN_READY.sh  BLUEPRINT.md  CEO-MASTER-AUDIT-REPORT.md  CHANGELOG.md  CHECK_SWARM_STATUS.sh  CI-CD-SETUP.md  CODE_OF_CONDUCT.md  CONSOLIDATION-STATUS-2026-01-28.md  CONSOLIDATION_SUCCESS_2026-01-28.md  CONTAINER-OVERVIEW.md  CONTAINER-REGISTRY.md  CONTAINER-STATUS-REPORT.md  CONTINUATION_GUIDE.md  CONTRIBUTING.md  CRITICAL-FIX-LOCALHOST-TO-DELQHI.md  CRITICAL_ERRORS_FOUND.md  CRITICAL_FIXES_APPLIED_2026-01-29.md  DASHBOARD_DESIGN_ANALYSIS_2026.md  DELIVERABLES-SUMMARY-2026.md  DEPLOYMENT-CHECKLIST.md  (+171 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  dependabot-auto.yml  deploy.yml  release.yml  test.yml  tests.yml
.opencode/: package-lock.json  task_manager.py  tasks.json  zimmer10_records.db  zimmer10_records.db-shm  zimmer10_records.db-wal
.serena/: project.yml
.serena/memories/: SIN-Solver-Domain-Fix-2026-01-29.md  grey-zone-captcha-intelligence.md  (+5 more)
.session-notes/: SESSION-10-INDEX.md
.tasks/: DEV1-BACKEND-TASKS.md  DEV2-FRONTEND-TASKS.md  DEV3-CAPTCHA-TASKS.md  tasks-captcha-enhancement-v19.json  tasks-system.json
Docker/: API-REFERENCE.md  DEPLOYMENT-GUIDE.md  MANIFEST.md  PHASE-7-EXECUTION-LOG.md  PHASE-7-PLAN.md  PHASE-8-EXECUTION-LOG.md  PHASE-8-PLAN.md  README.md  check-services.sh  health-check.sh  lastchanges.md  phase-7-comprehensive-tests.sh  phase-7-setup.sh  startup-log.txt  startup-with-env.sh  startup.sh
Docs/: 02-CAPTCHA-TRAINING-GUIDE.md  03-PHASE-2.5-ROADMAP.md  20-CAPTCHA-COMPLETION-REPORT.md  20-CAPTCHA-ENHANCEMENT-PROJECT-V19.md  20-CAPTCHA-UPGRADE-FINAL.md  20-CAPTCHA-UPGRADE-STATUS.md  21-blueprint-audit.md  22-blueprint-final.md  API-ENTERPRISE.md  API-REFERENCE-FULL.md  API-REFERENCE.md  API-SECURITY.md  CI-CD-VERIFICATION-REPORT.md  DEPLOYMENT-GUIDE.md  DOCS.md  ENTERPRISE-FEATURES.md  INTEGRATION-REPORT.md  PHASE-15.2-COMPLETION.md  PHASE-7-SECURITY-TESTING.md  QUICKSTART.md  SECURITY-ISSUE-TEMPLATE.md  SECURITY-WHITEPAPER.md  SIN-SOLVER-EXECUTIVE-SUMMARY.md  SIN-SOLVER-OPERATIONAL-GUIDE.md  SIN-SOLVER-TECHNICAL-ARCHITECTURE.md  SWARM-5-MCP-TESTING-2026-01-30.md  TASK2-COMPLETION.md  VAULT-API.md  captcha-integration-report.json
Docs/images/: README.md
NOTIFICATIONS/: v2.1.0-release-email.txt
RELEASES/: v2.1.0-SECURITY-HARDENING.md
agents/: human-behavior-module.js
alembic/: env.py
app/: __init__.py  captcha_solver_pipeline.py  main.py  main_enterprise.py  requirements.txt  test_captcha_solver_pipeline.py  test_e2e_2captcha_worker.py  test_integration_quick.py  test_minimal.py  test_ocr_packages_simple.py  test_ocr_quick.py
dashboard/: .env.example  .env.production.local  .eslintrc.js  Dockerfile  README-CAPTCHA.md  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vercel.json
dashboard-enterprise/: README.md  package.json
doc/: AGENTS.md  PHASE_0_AND_1_ROADMAP.md  README.md
integrations/: audio-captcha-solver.ts  captcha-solver.ts  index.ts  skyvern-client.ts  stagehand-client.ts  steel-client.ts  types.ts  vision-client.ts
mcp-wrappers/: CAPTCHA-INTEGRATION.md  README-SCIRA.md  README.md  captcha-mcp-wrapper.js  package-scira.json  plane-mcp-wrapper.js  scira-mcp-wrapper.js  sin-deep-research-mcp-wrapper.js  sin-social-mcp-wrapper.js  sin-video-gen-mcp-wrapper.js  skyvern-mcp-wrapper.js
models/: training_report_ocr.json
monitoring/: README.md
n8n-workflows/: 00-START-HERE.md  01-postgres-test.json  02-agent-zero-task.json  03-full-orchestration.json  IMPLEMENTATION-SUMMARY.md  README.md  TESTING-GUIDE.md  schema.sql
phase-2.5-deployment/: .dockerignore  Dockerfile  build.sh  deployment-notes.md  docker-compose.yml  postgres-init.sql
room-11-plane-dev/: Dockerfile.mcp  docker-compose.yml  docker-compose.yml.backup.legacy.2026-01-29  nginx.conf
room-30-scira-ai-search/: docker-compose.yml  sandbox.py
scripts/: antigravity-account-manager.sh  demo_worldshardest.py  forensic_troubleshooting.sh  persist_docker_images.sh  phase-3-import-n8n-workflow.py  phase-3-import-workflow.sh  phase-3-manual-workflow-guide.md  phase-3-verify-import.py  recovery.sh  run_live_demo.py  save_room.sh  seed_analytics.py  seed_db.py  stress_test_solver.py  test_real_solver.py  test_skyvern_detection.py  test_skyvern_endpoints.py
solvers/: consensus-solver.js
tests/: IMPLEMENTATION_SUMMARY.md  README.md  TEST_REPORT.md  TEST_SCOPE.md  conftest.py  pytest.ini  ralph_loop_test.py  requirements-test.txt  run-tests.sh  test_advanced.py  test_captcha_integration.py  test_container_health.py  test_e2e_integration.py  test_json_parsing.py  test_load_performance.py  test_mtcaptcha.py
training/: OCR_TRAINING_REPORT.json  OCR_TRAINING_REPORT.md  PHASE_2.5_PLAN.md  README.md  SESSION_10_STATUS.md  augment_dataset.py  benchmark_captcha_solver.py  check_training.sh  collect_funcaptcha_200.py  collect_funcaptcha_samples.py  comprehensive_test_suite.py  comprehensive_test_suite_v2.py  data.yaml  dataset_manifest.json  download_real_captchas.py  generate_benchmark_charts.py  monitoring_training.sh  ocr_train_corrected.py  ocr_training_script.py  runs  test_captcha_training.py  train_yolo_classifier.py  training-lastchanges.md  training_statistics_report.json
training_split/: train.cache  val.cache
troubleshooting/: ts-ticket-01.md  ts-ticket-02.md  ts-ticket-03.md  ts-ticket-04.md  ts-ticket-05.md
workflows/: 2captcha-intelligent-test.json
(+1445 files in other folders)
